#pragma once

class Juego{
    private:
        int nivelesCompletados;
        int puntuacionTotal;
    
    public:
        Juego(){

        }
        void iniciarJuego(){

        }
        void finalizarJuego(){

        }

};