#pragma once

class Nivel{
    private:
        int numero;
        int puntuacion;
    
    public:
        Nivel(){}

        void iniciarNivel(){

        }
        void finalizarNivel(){

        }
};