#pragma once

class Pelota{
    private:
        int posicionX;
        int posicionY;
    
    public:
        Pelota(){

        }
        void mover(){

        }
        void rebotar(){

        }
};